@@ -1,3 +1,3 @@
-.even_line { background-color: #fff; }
-.odd_line { background-color: #eef; }
-.even_line, .odd_line { padding-top: 1px; padding-bottom: 1px; }
+.line[alternate=even] { background-color: #fff; }
+.line[alternate=odd] { background-color: #eef; }
+.line[alternate=even], .line[alternate=odd] { padding-top: 1px; padding-bottom: 1px; }
